Update env file template

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 MY_UID=1000
 MY_GID=1000
 PROJECTS_DIR=/var/www
-VHOSTS_DIR=./docker-dev-stack/config/sites
+VHOSTS_DIR=./config/sites
 
 ########################
 ## MySQL Config
